variables.RunFour.scala.error
Compilation error:
RunFour:3: error: not found: value cpt
while( cpt!=4 ){
       ^