variables.RunFour.scala.code

var cptBaggle : Int = 0
while( cpt!=4 ){
  if(isOverBaggle()){
    cptBaggle=cptBaggle+1
  }
}